--- a/Invoice_Templates/SubReport_TC_Tax_1.jrxml
+++ b/Invoice_Templates/SubReport_TC_Tax_1.jrxml
@@ -32,7 +32,7 @@
 				</textElement>
 				<text><![CDATA[Invoice Amount in words]]></text>
 			</staticText>
-			<textField>
+			<textField isStretchWithOverflow="true">
 				<reportElement x="0" y="34" width="250" height="15" isRemoveLineWhenBlank="true" uuid="33761d58-3e4f-40f7-87fe-ffe17a9139e2">
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 				</reportElement>
@@ -42,7 +42,7 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{amountInWords}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isStretchWithOverflow="true">
 				<reportElement x="0" y="94" width="250" height="15" isRemoveLineWhenBlank="true" uuid="1d7fac02-2323-48af-b993-d3b52a0c4f06">
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
