--- a/Invoice_Templates/IT_A4_Tax_1.jrxml
+++ b/Invoice_Templates/IT_A4_Tax_1.jrxml
@@ -38,7 +38,7 @@
 			<textField>
 				<reportElement x="0" y="20" width="230" height="23" uuid="6fe057fb-acc6-482a-ba73-f116f46955dc"/>
 				<textElement>
-					<font fontName="DejaVu Sans"/>
+					<font fontName="DejaVu Sans" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Phone No. : "+$P{MobileNumber}]]></textFieldExpression>
 			</textField>
@@ -66,7 +66,7 @@
 			<textField>
 				<reportElement x="1" y="106" width="240" height="19" uuid="a812a422-8282-4e65-b1f2-0bfc383b6cea"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="false"/>
+					<font fontName="DejaVu Sans" size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Contact No. :" +$F{CustomerMobileNo}]]></textFieldExpression>
 			</textField>
@@ -87,11 +87,11 @@
 		</band>
 	</title>
 	<columnHeader>
-		<band height="25" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<staticText>
 				<reportElement mode="Opaque" x="0" y="0" width="20" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="bd9aabcb-4037-491a-b959-bcfaebc0973a"/>
-				<textElement textAlignment="Center">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[#]]></text>
 			</staticText>
@@ -100,36 +100,36 @@
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
+					<font fontName="DejaVu Sans" size="9" isBold="true"/>
 					<paragraph leftIndent="5"/>
 				</textElement>
 				<text><![CDATA[Item Name]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="200" y="0" width="80" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="b81a600a-5147-4aaf-9c9b-888ddad00470"/>
+				<reportElement mode="Opaque" x="200" y="0" width="70" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="b81a600a-5147-4aaf-9c9b-888ddad00470"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
+					<font fontName="DejaVu Sans" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[HSN]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="280" y="0" width="50" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="67a13f9f-f3df-4905-a9de-0b123fcfd565"/>
+				<reportElement mode="Opaque" x="270" y="0" width="50" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="67a13f9f-f3df-4905-a9de-0b123fcfd565"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
+					<font fontName="DejaVu Sans" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Qty]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="330" y="0" width="70" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="65f519d6-13e1-435a-8b2a-679a83828abb"/>
+				<reportElement mode="Opaque" x="320" y="0" width="70" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="65f519d6-13e1-435a-8b2a-679a83828abb"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
+					<font fontName="DejaVu Sans" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Rate]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="400" y="0" width="75" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="7ae74138-33bb-4eb5-be0c-b0eadabacaad"/>
+				<reportElement mode="Opaque" x="390" y="0" width="85" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="7ae74138-33bb-4eb5-be0c-b0eadabacaad"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
+					<font fontName="DejaVu Sans" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[GST]]></text>
 			</staticText>
@@ -138,7 +138,7 @@
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
+					<font fontName="DejaVu Sans" size="9" isBold="true"/>
 					<paragraph rightIndent="5"/>
 				</textElement>
 				<text><![CDATA[Amount]]></text>
@@ -185,7 +185,7 @@
 				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="200" y="0" width="80" height="20" uuid="87a06686-17c9-48c8-93cb-4d9beafa1d89">
+				<reportElement x="200" y="0" width="70" height="20" uuid="87a06686-17c9-48c8-93cb-4d9beafa1d89">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -201,7 +201,7 @@
 				<textFieldExpression><![CDATA[$F{HSN}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="280" y="0" width="50" height="20" uuid="879012c4-18f0-4128-afd3-4120ae541ff1">
+				<reportElement x="270" y="0" width="50" height="20" uuid="879012c4-18f0-4128-afd3-4120ae541ff1">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -217,7 +217,7 @@
 				<textFieldExpression><![CDATA[$F{Qty}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="330" y="0" width="70" height="20" uuid="0bd1f36a-1ca5-459f-896a-c19d3b7bca98">
+				<reportElement x="320" y="0" width="70" height="20" uuid="0bd1f36a-1ca5-459f-896a-c19d3b7bca98">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -233,7 +233,7 @@
 				<textFieldExpression><![CDATA[$F{Rate}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="400" y="0" width="75" height="20" uuid="62ffa877-4606-4856-bfd2-b93d3c2f57b9">
+				<reportElement x="390" y="0" width="85" height="20" uuid="62ffa877-4606-4856-bfd2-b93d3c2f57b9">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -271,7 +271,7 @@
 	<summary>
 		<band height="57" splitType="Stretch">
 			<staticText>
-				<reportElement x="20" y="0" width="260" height="20" uuid="8a6eeeff-593a-4600-930f-c8f38ee0831f">
+				<reportElement x="20" y="0" width="250" height="20" uuid="8a6eeeff-593a-4600-930f-c8f38ee0831f">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
 				</reportElement>
@@ -289,7 +289,7 @@
 				<text><![CDATA[Total]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="280" y="0" width="50" height="20" uuid="a9e2ccea-eb56-419d-91e9-0fac5b5b7709">
+				<reportElement x="270" y="0" width="50" height="20" uuid="a9e2ccea-eb56-419d-91e9-0fac5b5b7709">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -305,7 +305,7 @@
 				<textFieldExpression><![CDATA[$F{TotalQty}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="400" y="0" width="75" height="20" uuid="57ec7d74-8d0e-4fea-90de-d8f19235a974">
+				<reportElement x="390" y="0" width="85" height="20" uuid="57ec7d74-8d0e-4fea-90de-d8f19235a974">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -357,7 +357,7 @@
 				<textFieldExpression><![CDATA[""]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="330" y="0" width="70" height="20" uuid="dcc70bce-94a9-4c19-bf60-4c32fd79beb5">
+				<reportElement x="320" y="0" width="70" height="20" uuid="dcc70bce-94a9-4c19-bf60-4c32fd79beb5">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -378,7 +378,7 @@
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{SUBREPORT_DATA})]]></dataSourceExpression>
-				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "SubReport_Tax_1.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "SR_A4_Tax_1.jasper"]]></subreportExpression>
 			</subreport>
 			<subreport>
 				<reportElement x="0" y="21" width="250" height="30" uuid="9208a713-da36-45ab-a578-d04244c1599c">
@@ -386,7 +386,7 @@
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{SUBREPORT_TC_DATA})]]></dataSourceExpression>
-				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "SubReport_TC_Tax_1.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "SR_A4_TC.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 	</summary>
