--- a/Invoice_Templates/IT_TH_Cash.jrxml
+++ b/Invoice_Templates/IT_TH_Cash.jrxml
@@ -57,17 +57,17 @@
 				</textField>
 				<staticText>
 					<reportElement x="50" y="11" width="80" height="10" isRemoveLineWhenBlank="true" uuid="88f17dd7-6608-4cbb-afb4-a640efb030d1">
-						<printWhenExpression><![CDATA[new Double($F{DiscountAmount}) !=0]]></printWhenExpression>
+						<printWhenExpression><![CDATA[!$F{DiscountAmount}.equalsIgnoreCase( "0.00" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
 						<font fontName="DejaVu Sans" size="6"/>
 					</textElement>
-					<text><![CDATA[Total Amount :]]></text>
+					<text><![CDATA[Sub Total :]]></text>
 				</staticText>
 				<textField>
 					<reportElement x="130" y="11" width="56" height="10" isRemoveLineWhenBlank="true" isPrintInFirstWholeBand="true" uuid="cbee006c-1e2c-498a-ac2c-53b12a8f2f25">
 						<property name="com.jaspersoft.studio.unit.rightIndent" value="mm"/>
-						<printWhenExpression><![CDATA[new Double($F{DiscountAmount}) !=0]]></printWhenExpression>
+						<printWhenExpression><![CDATA[!$F{DiscountAmount}.equalsIgnoreCase( "0.00" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
 						<font fontName="DejaVu Sans" size="6"/>
@@ -77,7 +77,7 @@
 				</textField>
 				<staticText>
 					<reportElement x="50" y="21" width="80" height="10" isRemoveLineWhenBlank="true" uuid="32b9758b-9e50-4a36-a617-bbe2b82907b4">
-						<printWhenExpression><![CDATA[new Double($F{DiscountAmount}) !=0]]></printWhenExpression>
+						<printWhenExpression><![CDATA[!$F{DiscountPer}.equalsIgnoreCase( "0" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
 						<font fontName="DejaVu Sans" size="6"/>
@@ -87,7 +87,7 @@
 				<textField>
 					<reportElement x="130" y="21" width="56" height="10" isRemoveLineWhenBlank="true" uuid="14dfbac7-d639-49f6-b390-7dce5ae01aa9">
 						<property name="com.jaspersoft.studio.unit.rightIndent" value="mm"/>
-						<printWhenExpression><![CDATA[new Double($F{DiscountAmount}) !=0]]></printWhenExpression>
+						<printWhenExpression><![CDATA[!$F{DiscountPer}.equalsIgnoreCase( "0" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
 						<font fontName="DejaVu Sans" size="6"/>
@@ -100,11 +100,11 @@
 					<textElement textAlignment="Right">
 						<font fontName="DejaVu Sans" size="8" isBold="true"/>
 					</textElement>
-					<text><![CDATA[Net Amount :]]></text>
+					<text><![CDATA[Total :]]></text>
 				</staticText>
 				<staticText>
 					<reportElement x="50" y="31" width="80" height="10" isRemoveLineWhenBlank="true" uuid="139373cf-29df-45b5-9c10-25c19acb1e26">
-						<printWhenExpression><![CDATA[new Double($F{DiscountAmount}) !=0]]></printWhenExpression>
+						<printWhenExpression><![CDATA[!$F{DiscountAmount}.equalsIgnoreCase( "0.00" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
 						<font fontName="DejaVu Sans" size="6"/>
@@ -114,7 +114,7 @@
 				<textField>
 					<reportElement x="130" y="31" width="56" height="10" isRemoveLineWhenBlank="true" uuid="9affab65-b546-4660-9433-b7842180994b">
 						<property name="com.jaspersoft.studio.unit.rightIndent" value="mm"/>
-						<printWhenExpression><![CDATA[new Double($F{DiscountAmount}) !=0]]></printWhenExpression>
+						<printWhenExpression><![CDATA[!$F{DiscountAmount}.equalsIgnoreCase( "0.00" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
 						<font fontName="DejaVu Sans" size="6"/>
